--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container">
 				<h1>Women in Business IÉSEG</h1>
 				<h2>Empower women in the business environment!</h2>
-				<a href="https://www.instagram.com/wibieseg/?hl=fr" class="btn-blue">Discover our events</a>
+				<a href="#contact-section" class="btn-blue">Contact Us</a>
 			</div>
 
 		</div>
@@ -42,8 +42,12 @@
 			</div>
 
 		</div>
+
+		<div id="contact-section">
+
 		
 		<div data-tf-widget="YPRs3eVc" data-tf-opacity="100" data-tf-iframe-props="title=Women in Business" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+		</div>
 
 	</body>
 
