--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div id="contact-section">
 
 		
-		<div data-tf-widget="YPRs3eVc" data-tf-opacity="100" data-tf-iframe-props="title=Women in Business" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+		<div data-tf-widget="YPRs3eVc" data-tf-opacity="100" data-tf-iframe-props="title=Women in Business" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;margin-top:20px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 		</div>
 
 	</body>
